chore: Split ChannelScanner and OperationScanner (#562)